<resources>
    <string name="app_name">WhereRU</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_filters">filtersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comments">Comments</string>
    <string name="scroll_view">Scroll View</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="username">Username</string>
    <string name="insert_text_here">Insert Text Here</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="_100">100</string>
    <string name="_1_1_23_12_00am">1/1/23 12:00am</string>
    <string name="make_a_comment">Make a Comment</string>
    <string name="distance">Distance</string>
    <string name="apply">Apply</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="distance_should_be_greater_han_0_and_less_than_1000_meters">Distance should be greater han 0 and less than 1000 Meters</string>
    <string name="password">password</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="username_taken">Username Taken</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_here">Type Here</string>
    <string name="comment_text">Comment Text</string>
    <string name="post_comment">Post Comment</string>
    <string name="invalid_text">Invalid Text</string>
    <string name="post_text">Post Text</string>
    <string name="radius">Radius</string>
    <string name="tags">Tags</string>
    <string name="tag_1">Tag 1</string>
    <string name="tag_2">Tag 2</string>
    <string name="tag_3">Tag 3</string>
    <string name="tag_4">Tag 4</string>
    <string name="tag_5">Tag 5</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="radius_should_be_greater_than_0_and_less_than_1000_meters">Radius should be greater than 0 and less than 1000 Meters</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="filters">Filters</string>
    <string name="map_view">Map View</string>
    <string name="account">Account</string>
    <string name="make_post">Make Post</string>
    <string name="textview">TextView</string>
</resources>