<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/authorText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textview" />
        </LinearLayout>

        <TextView
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_text_here"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/likeButton"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="likeComment"
                android:text="@string/good"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/likeButton2"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="dislikeComment"
                android:text="@string/bad"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/likectr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1_1_23_12_00am"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>