<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpandedPostActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:background="#AFAFAF"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="#AFAFAF"
            android:text="@string/username" />

        <TextView
            android:id="@+id/postText2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="#AFAFAF"
            android:text="@string/insert_text_here"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#AFAFAF"
            android:orientation="horizontal">

            <Button
                android:id="@+id/likeButton"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="likeThisPost"
                android:text="@string/good"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/likeButton2"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="dislikeThisPost"
                android:text="@string/bad"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/likectr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1_1_23_12_00am"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/commentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonList"
        android:layout_width="393dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">

        <Button
            android:id="@+id/scrollViewButton"
            android:layout_width="50dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:gravity="top"
            android:onClick="toScrollView"
            android:text="@string/scroll_view" />

        <Button
            android:id="@+id/makeCommentButton"
            android:layout_width="50dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:gravity="top"
            android:onClick="toMakeComment"
            android:text="@string/make_a_comment" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>